--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
 DATABASE_URI=127.0.0.1
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=alisson299409
-DATABASE_NAME=prodigentia
+DATABASE_PASSWORD=123456
+DATABASE_NAME=teste
