--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alissonzam/prodigentia",
+    "name": "alissonzam/socialGraph",
     "authors": [
         {
             "name": "Alisson Zampietro",
